# inverted-index-concurrency

./: .gitignore  Cargo.toml  LICENSE  README.md  index.bat
src/: index.rs  lib.rs  merge.rs  read.rs  tmp.rs  write.rs
texts/: text1.txt  text2.txt  text3.txt
